# CMakeTests

./: CMakeLists.txt  HelloWorldConfig.h  HelloWorldConfig.h.in  Makefile  hello.c
